about us and homepage content

--- a/src/app/pages/about-us/about-us.html
+++ b/src/app/pages/about-us/about-us.html
@@ -1,1 +1,26 @@
-<p>about-us works!</p>
+<div class="container mx-auto my-3 my-md-5">
+    <div class="heading-title text-center mb-5">About Us</div>
+    <div class="paragraph">
+        Who We Are
+        Founded in 2025, Codemobix Technologies is a tech-forward company built by passionate engineers, designers, and
+        innovators focused on transforming businesses with AI-first solutions and dynamic digital experiences. We
+        combine the power of Artificial Intelligence with modern technologies like Flutter, Angular, Python, React, and
+        Node.js to solve real-world problems and drive measurable outcomes.
+        Our Vision
+        To become a global leader in AI-driven technology, empowering businesses to unlock smarter solutions, enhance
+        user experiences, and drive positive change through innovative software engineering.
+        Our Mission
+    </div>
+    <ul class="mt-3">
+        <li class="paragraph">
+            To simplify and accelerate AI adoption across industries.
+        </li>
+        <li class="paragraph">
+            To build robust, intuitive, and future-ready web and mobile solutions.
+        </li>
+        <li class="paragraph">
+            To foster a culture of innovation, agility, and customer-first thinking.
+        </li>
+    </ul>
+
+</div>
