--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -5,7 +5,7 @@
             <div class="heading-title">Codemobix Technologies</div>
             <div class="heading-description mb-3 mb-md-0">AI, Code, and Impact.</div>
         </div>
-        <div class="row justify-content-center align-items-center">
+        <div class="row justify-content-center align-items-center mt-3 mt-md-5">
             <div class="col-md-6 col-12 text-center">
                 <p class="paragraph">
                     At Codemobix Technologies, we build the future—one intelligent line of code at a time.
@@ -16,9 +16,19 @@
                     we’re here to craft scalable and smart solutions that deliver real-world impact.
                 </p>
             </div>
-            <div class="col-md-6 col-12 mt-3 mt-md-5">
+            <div class="col-md-6 col-12 p-2 mt-3 mt-md-0 position-relative">
+                <div class="position-absolute z-1 top-0 end-0">
+                    <div class="card p-3 mb-0  rounded-circle upper-icon">
+                        <i class="fa-solid fa-brain fs-1"></i>
+                    </div>
+                </div>
                 <div class="card p-3 mb-0">
                     <div class="banner"></div>
+                </div>
+                <div class="position-absolute z-1 bottom-0 ">
+                    <div class="card p-3 mb-0 rounded-circle lower-icon">
+                        <i class="fa-solid fa-bolt fs-1"></i>
+                    </div>
                 </div>
             </div>
         </div>
