--- a/src/app/pages/homepage/homepage.html
+++ b/src/app/pages/homepage/homepage.html
@@ -1,6 +1,8 @@
 <div class="container-fluid position-relative body-container g-0">
     <app-header />
-    <router-outlet />
+    <div class="router-wrapper">
+        <router-outlet />
+    </div>
     <app-footer />
     <!-- <div class="bubbles d-flex position-relative">
         <span style="--i:11;"></span>
