--- a/src/app/pages/homepage/homepage.scss
+++ b/src/app/pages/homepage/homepage.scss
@@ -1,119 +1,8 @@
-.body-container {
-  .heading-title {
-    font-size: 3.5em;
-    font-weight: 700;
-  }
-
-  .heading-description {
-    font-size: 1.2em;
-    font-weight: 500;
-  }
-
-  .section-1 {
-    .banner {
-      height: 50vh;
-      background-image: url("https://images.unsplash.com/photo-1678995635432-d9e89c7a8fc5");
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-  }
-
-  .section-2 {
-    .expertiseCard {
-      background-color: #006dc8;
-      border-radius: 30px;
-      color: #fff;
-
-      &:hover {
-        animation: shake 0.5s;
-        border-color: #aeff00;
-        .card-title {
-          color: #aeff00;
-        }
-
-        .expertise-icon {
-          transform: scale(1.1);
-        }
-      }
-
-      .expertise-icon {
-        width: fit-content;
-        border-radius: 12px;
-      }
-    }
-
-    @keyframes shake {
-      0% {
-        transform: translate(0);
-      }
-      20% {
-        transform: translate(-1px, 1px);
-      }
-      40% {
-        transform: translate(-1px, -1px);
-      }
-      60% {
-        transform: translate(1px, 1px);
-      }
-      80% {
-        transform: translate(1px, -1px);
-      }
-      100% {
-        transform: translate(0);
-      }
-    }
-  }
+.router-wrapper {
+  width: 100vw;
+  min-height: calc(100vh - 190px);
 
   @media screen and (max-width: 765px) {
-    .heading-title {
-      font-size: 2em;
-    }
-
-    .heading-description {
-      font-size: 0.8em;
-    }
-
-    .section-1 {
-      .banner {
-        height: 30vh;
-      }
-    }
+    min-height: calc(100vh - 170px) !important;
   }
-
-  // .bubbles {
-  //   overflow: hidden;
-  //   height: 75%;
-  //   span {
-  //   position: relative;
-  //   width: 30px;
-  //   height: 30px;
-  //   background: 4fc3dc;
-  //   margin: 0 4px;
-  //   border-radius: 50%;
-  //   box-shadow: 0 0 0 10px #4fc3dc44,
-  //   0 0 50px #4fc3dc,
-  //   0 0 100px #4fc3dc;
-  //   animation: animate 15s linear infinite;
-  //   animation-duration: calc(125s / var(--i));
-
-  //   &:nth-child(even) {
-  //     background: #ff2d75;
-  //      box-shadow: 0 0 0 10px #ff2d7544,
-  //       0 0 50px #ff2d75,
-  //       0 0 100px #ff2d75;
-  //   animation: animate 15s linear infinite;
-  //   animation-duration: calc(125s / var(--i));
-  //   }
-  // }
-  // }
-
-  //   @keyframes animate {
-  //     0% {
-  //       transform: translateY(90vh) scale(0);
-  //     }
-  //     100% {
-  //       transform: translateY(0vh) scale(1);
-  //     }
-  //   }
 }
