--- a/src/app/pages/components/header/header.scss
+++ b/src/app/pages/components/header/header.scss
@@ -75,7 +75,7 @@
         letter-spacing: 2px;
         transition: color 0.6s ease;
 
-        &:hover {
+        &:hover, &.active-link {
           color: #007bff;
         }
       }
