--- a/src/app/pages/contact-us/contact-us.html
+++ b/src/app/pages/contact-us/contact-us.html
@@ -1,7 +1,17 @@
 <div class="container contact-us my-5">
     <div class="heading-title text-center mb-3">Connect With Us</div>
-    <div class="d-flex justify-content-center align-items-center">
-        <div class="contact-form-area">
+    <div class="row justify-content-center align-items-center">
+        <div class="heading-description col-md-6 col-12">
+            <p class="text-md-start text-center">Let’s Build the Future Together.</p>
+            <p class="text-md-start text-center"> Have an idea or project in mind? <br> Let’s talk.</p>
+            <div class="px-3">
+                <h5>📧 Sales Inquiries: sales&#64;codemobix.in</h5>
+                <h5>🌐 Website: www.codemobix.in</h5>
+                <h5>📍 Location: Sohana Road, Gurgaon, <br> Haryana, India</h5>
+            </div>
+        </div>
+        
+        <div class="col-12 col-md-6 mt-3 mt-md-0">
             <form (ngSubmit)="onSubmit()" #iform="ngForm">
                 <div class="mb-3">
                     <label for="name" class="form-label required">Name</label>
@@ -19,7 +29,8 @@
                 </div>
                 <div class="mb-3">
                     <label for="message" class="form-label required">Message</label>
-                    <textarea type="text" class="form-control" id="message" name="message" [(ngModel)]="form.message" rows="5" required></textarea>
+                    <textarea type="text" class="form-control" id="message" name="message" [(ngModel)]="form.message"
+                        rows="5" required></textarea>
                 </div>
                 <div class="d-flex justify-content-center align-items-center mt-4">
                     <button type="submit" class="btn btn-primary py-2 px-5" [disabled]="iform.invalid">Submit</button>
