pages added and updated with content

--- a/src/app/pages/components/header/header.html
+++ b/src/app/pages/components/header/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar" [class.header-scrolled]="isScrolled">
   <a class="navbar-brand d-flex align-items-center" href="#">
     <img src="/images/codemobix_logo.png" alt="Logo" width="200" height="60" class="d-inline-block align-text-top">
     <!-- <span class="ms-1 logo-name">CodeMobix Technologies</span> -->
