--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,3 +1,43 @@
+// Base
+.fade-in, .fade-in-left, .fade-in-right, .fade-in-up, .slide-down, .zoom-in {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.8s ease-out;
+  &.visible {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.fade-in-left {
+  transform: translateX(-40px);
+}
+.fade-in-right {
+  transform: translateX(40px);
+}
+.fade-in-up {
+  transform: translateY(40px);
+}
+.slide-down {
+  transform: translateY(-40px);
+}
+.zoom-in {
+  transform: scale(0.8);
+}
+
+// Delay utility
+.delay-1 {
+  transition-delay: 0.3s;
+}
+.delay-2 {
+  transition-delay: 0.6s;
+}
+.delay-3 {
+  transition-delay: 0.9s;
+}
+
+
+
 .section-1 {
   .card {
     background-color: #006dc8;
@@ -11,6 +51,11 @@
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 30px;
+  }
+
+  .upper-icon, .lower-icon {
+    width: 75px;
+    height: 75px;
   }
   
   .upper-icon {
@@ -61,7 +106,9 @@
     }
 
     .expertise-icon {
-      width: fit-content;
+      width: 55px !important;
+      height: 55px !important;
+      display: flex;
       border-radius: 12px;
     }
   }
