--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,20 +2,19 @@
 
 /* Importing Bootstrap SCSS file. */
 @use "bootstrap/scss/bootstrap";
-@import "typeface-poppins/index.css";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
   height: 100vh;
   width: 100%;
   background: #000;
-  color: #fff;
+  color: #000;
   overflow: hidden;
 
   .body-container {
@@ -24,27 +23,20 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
     margin: 0;
-    background: linear-gradient(
-      -45deg,
-      #4158d0,
-      #e560dc,
-      #ffb374,
-      #ef5f5f,
-      #d840b6
-    );
-    background-size: 400% 400%;
-    animation: bg 12s ease infinite;
+    background: #fff;
+    // animation: bg 12s ease infinite;
 
     .heading-title {
       font-size: 3.5em;
       font-weight: 700;
       line-height: 1.2;
+      color: #0082fc;
     }
 
     .heading-description {
       font-size: 1.8em;
       font-weight: 500;
-      color: #ffffffcc;
+      color: #0082fc8f
     }
 
     .paragraph {
