home pahe and header updated

--- a/src/app/pages/components/header/header.html
+++ b/src/app/pages/components/header/header.html
@@ -1,7 +1,6 @@
 <nav class="navbar" [class.header-scrolled]="isScrolled">
   <a class="navbar-brand d-flex align-items-center" href="#">
     <img src="/images/codemobix_logo.png" alt="Logo" width="200" height="60" class="d-inline-block align-text-top">
-    <!-- <span class="ms-1 logo-name">CodeMobix Technologies</span> -->
   </a>
 
   @if(!isMobileView) {
@@ -11,38 +10,35 @@
   }@else {
   <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation"
     (click)="open(menuBar)">
-    <span class="navbar-toggler-icon"></span>
+    <i class="fa-solid fa-bars"></i>
   </button>
   <ng-template #menuBar let-offcanvas>
-   <div class="menubar">
-     <div class="offcanvas-header">
-      <button type="button" class="btn btn-danger cta-button  "
-      style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
-      (click)="onGetStartedClick()">
-      Get Started
-    </button>
-      <button type="button" class="btn-close" aria-label="Close" (click)="offcanvas.dismiss('Cross click')"></button>
+    <div class="menubar">
+      <div class="offcanvas-header">
+        <button type="button" class="btn btn-danger cta-button" (click)="onGetStartedClick()">
+          Get Started
+        </button>
+        <button type="button" class="btn-close" aria-label="Close" (click)="offcanvas.dismiss('Cross click')"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="nav-menu d-flex flex-column my-auto">
+          <ng-container *ngTemplateOutlet="menu; context: { isMobileView }"></ng-container>
+        </ul>
+      </div>
     </div>
-    <div class="offcanvas-body">
-      <ul class="nav-menu d-flex flex-column my-auto">
-        <ng-container *ngTemplateOutlet="menu; context: { isMobileView }"></ng-container>
-      </ul>
-    </div>
-   </div>
   </ng-template>
   }
 </nav>
 
 <ng-template #menu let-isMobileView="isMobileView">
   <li class="nav-item" *ngFor="let item of navItems">
-    <a class="nav-link mx-3" [routerLink]="item.route" [routerLinkActive]="['active-link']">
+    <a class="nav-link mx-3" [routerLink]="item.route" (click)="!isMobileView ? '' : closeMenu()"
+      [routerLinkActive]="['active-link']">
       {{item.label}}
     </a>
   </li>
   <li class="nav-item" *ngIf="!isMobileView">
-    <button type="button" class="btn btn-danger cta-button  "
-      style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"
-      (click)="onGetStartedClick()">
+    <button type="button" class="btn btn-danger cta-button" (click)="onGetStartedClick()">
       Get Started
     </button>
   </li>
