--- a/src/app/pages/about-us/about-us.html
+++ b/src/app/pages/about-us/about-us.html
@@ -1,5 +1,5 @@
 <div class="about-container p-3 my-3 my-md-5 mx-auto">
-  <div class="about-heading text-center">About Us</div>
+  <div class="heading-title mb-4 mb-md-5 text-center">About Us</div>
 
   <div class="about-paragraph">
     <h3>Who We Are</h3>
