--- a/src/app/pages/contact-us/contact-us.html
+++ b/src/app/pages/contact-us/contact-us.html
@@ -1,10 +1,9 @@
 <div class="container contact-us my-5">
-    <div class="heading-title text-center mb-3" data-aos="fade-down">Connect With Us</div>
+    <div class="heading-title mb-4 mb-md-5 text-center">Connect With Us</div>
 
     <div class="row justify-content-center align-items-center">
         <!-- LEFT TEXT SIDE -->
-        <div class="col-md-6 col-12 heading-description text-center text-md-start" data-aos="fade-up"
-            data-aos-delay="200">
+        <div class="col-md-6 col-12 heading-description text-center text-md-start">
             <h2 class="mb-3 fw-bold">Let’s Build the Future Together.</h2>
             <p class="lead">
                 Have an idea or project in mind?
@@ -12,7 +11,7 @@
                 Let’s talk and innovate.
             </p>
 
-            <ul class="list-unstyled mt-4 contact-info px-md-0 px-3" data-aos="fade-right" data-aos-delay="300">
+            <ul class="list-unstyled mt-4 contact-info px-md-0 px-3">
                 <li class="mb-2">
                     <i class="fas fa-envelope text-primary me-2"></i>
                     <strong>Sales:</strong>
@@ -27,33 +26,36 @@
                     <i class="fas fa-map-marker-alt text-primary me-2"></i>
                     <strong>Location:</strong> Sohana Road, Gurgaon, Haryana, India
                 </li>
+                <li>
+                    <i class="fas fa-phone text-primary me-2"></i>
+                    <strong>Call & Whatsapp:</strong> +91-0000000000
+                </li>
             </ul>
         </div>
 
         <!-- RIGHT FORM SIDE -->
-        <div class="col-12 col-md-6 mt-3 mt-md-0" data-aos="fade-left" data-aos-delay="400">
+        <div class="col-12 col-md-6 mt-3 mt-md-0">
             <form (ngSubmit)="onSubmit()" #iform="ngForm">
-                <div class="mb-3" data-aos="fade-up" data-aos-delay="500">
+                <div class="mb-3">
                     <label for="name" class="form-label required">Name</label>
                     <input type="text" class="form-control" id="name" name="name" [(ngModel)]="form.name" required />
                 </div>
-                <div class="mb-3" data-aos="fade-up" data-aos-delay="600">
+                <div class="mb-3">
                     <label for="email" class="form-label required">Email address</label>
                     <input type="email" class="form-control" id="email" name="email" [(ngModel)]="form.email"
                         required />
                     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
-                <div class="mb-3" data-aos="fade-up" data-aos-delay="700">
+                <div class="mb-3">
                     <label for="phone" class="form-label">Phone</label>
                     <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="form.phone" />
                 </div>
-                <div class="mb-3" data-aos="fade-up" data-aos-delay="800">
+                <div class="mb-3">
                     <label for="message" class="form-label required">Message</label>
                     <textarea class="form-control" id="message" name="message" [(ngModel)]="form.message" rows="5"
                         required></textarea>
                 </div>
-                <div class="d-flex justify-content-center align-items-center mt-4" data-aos="zoom-in"
-                    data-aos-delay="900">
+                <div class="d-flex justify-content-center align-items-center mt-4" >
                     <button type="submit" class="btn btn-primary py-2 px-5" [disabled]="iform.invalid">
                         Submit
                     </button>
