--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,5 +1,142 @@
+.section-1,
+.section-3 {
+  .card {
+    background-color: #006dc8;
+    border-radius: 40px;
+  }
+
+  i {
+    color: #006dc8;
+  }
+
+  .banner {
+    height: 25rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 30px;
+
+    &.banner-1 {
+      background-image: url("https://images.unsplash.com/photo-1678995635432-d9e89c7a8fc5");
+    }
+
+    &.banner-3 {
+      background-image: url("https://images.unsplash.com/photo-1681992894234-6db66a592c29");
+      background-size: 100% 100%;
+    }
+  }
+
+  .upper-icon,
+  .lower-icon {
+    width: 75px;
+    height: 75px;
+  }
+
+  .upper-icon {
+    background-color: yellow;
+  }
+
+  .lower-icon {
+    background: #f0780d;
+  }
+}
+
+.section-2 {
+  background-color: #000;
+  .expertiseCard {
+    background-color: #006dc8;
+    border-radius: 30px;
+    color: #fff;
+
+    &:hover {
+      animation: shake 0.5s;
+      border-color: #aeff00;
+      .card-title {
+        color: #aeff00;
+      }
+
+      .expertise-icon {
+        transform: scale(1.1);
+      }
+    }
+
+    .expertise-icon {
+      width: 55px !important;
+      height: 55px !important;
+      display: flex;
+      border-radius: 12px;
+    }
+  }
+}
+
+.section-4 {
+  background-color: #000;
+  color: #fff;
+}
+
+.section-5 {
+  max-width: 1000px;
+  button {
+    background-color: #dc3545;
+  }
+}
+
+@media screen and (max-width: 765px) {
+  section-1 {
+    .banner {
+      height: 30vh;
+    }
+  }
+}
+
+//animation
+
+@keyframes jump {
+  0% {
+    bottom: 0px;
+  }
+  25% {
+    bottom: 15px;
+  }
+  50% {
+    bottom: 30px;
+  }
+  75% {
+    bottom: 15px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-1px, 1px);
+  }
+  40% {
+    transform: translate(-1px, -1px);
+  }
+  60% {
+    transform: translate(1px, 1px);
+  }
+  80% {
+    transform: translate(1px, -1px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+
 // Base
-.fade-in, .fade-in-left, .fade-in-right, .fade-in-up, .slide-down, .zoom-in {
+.fade-in,
+.fade-in-left,
+.fade-in-right,
+.fade-in-up,
+.slide-down,
+.zoom-in {
   opacity: 0;
   transform: translateY(20px);
   transition: all 0.8s ease-out;
@@ -36,117 +173,32 @@
   transition-delay: 0.9s;
 }
 
-
-
-.section-1 {
-  .card {
-    background-color: #006dc8;
-    border-radius: 40px;
+//up and down animation css
+.floating-up-down {
+  &.upper {
+    animation: floatUp 5s ease-in-out infinite;
   }
-
-  .banner {
-    height: 25rem;
-    background-image: url("https://images.unsplash.com/photo-1678995635432-d9e89c7a8fc5");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 30px;
-  }
-
-  .upper-icon, .lower-icon {
-    width: 75px;
-    height: 75px;
-  }
-  
-  .upper-icon {
-    background-color: yellow;
-    animation: jump 9s linear infinite;
-  }
-
-  .lower-icon {
-    background: #f0780d;
-    animation: jump 6s linear infinite;
-  }
-
-  @keyframes jump {
-    0% {
-      bottom: 0px;
-    }
-    25% {
-      bottom: 15px;
-    }
-    50% {
-      bottom: 30px;
-    }
-    75% {
-      bottom: 15px;
-    }
-    100% {
-      bottom: 0px;
-    }
+  &.lower {
+    animation: floatDown 3s ease-in-out infinite;
   }
 }
 
-.section-2 {
-  .expertiseCard {
-    background-color: #006dc8;
-    border-radius: 30px;
-    color: #fff;
-
-    &:hover {
-      animation: shake 0.5s;
-      border-color: #aeff00;
-      .card-title {
-        color: #aeff00;
-      }
-
-      .expertise-icon {
-        transform: scale(1.1);
-      }
-    }
-
-    .expertise-icon {
-      width: 55px !important;
-      height: 55px !important;
-      display: flex;
-      border-radius: 12px;
-    }
+@keyframes floatUp {
+  0%,
+  100% {
+    transform: translateY(0px);
   }
-
-  @keyframes shake {
-    0% {
-      transform: translate(0);
-    }
-    20% {
-      transform: translate(-1px, 1px);
-    }
-    40% {
-      transform: translate(-1px, -1px);
-    }
-    60% {
-      transform: translate(1px, 1px);
-    }
-    80% {
-      transform: translate(1px, -1px);
-    }
-    100% {
-      transform: translate(0);
-    }
+  50% {
+    transform: translateY(-30px);
   }
 }
 
-@media screen and (max-width: 765px) {
-  .heading-title {
-    font-size: 2em;
+@keyframes floatDown {
+  0%,
+  100% {
+    transform: translateY(0px);
   }
-
-  .heading-description {
-    font-size: 0.8em;
-  }
-
-  .section-1 {
-    .banner {
-      height: 30vh;
-    }
+  50% {
+    transform: translateY(30px);
   }
 }
