services page content rendered with dynamic data, other minor changes

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -132,7 +132,7 @@
         with cutting-edge technology and innovative solutions.
       </div>
       <div class="d-flex justify-content-center align-items-center mt-3 mt-md-5">
-        <button type="button" class="btn text-light fw-bold py-3 px-5">Get Started Today
+        <button type="button" class="btn text-light fw-bold py-3 px-5" (click)="onGetStartedClick()">Get Started Today
           <i class="fa-solid fa-arrow-right ms-2 fw-bold"></i>
         </button>
       </div>
