--- a/src/app/pages/contact-us/contact-us.html
+++ b/src/app/pages/contact-us/contact-us.html
@@ -1,5 +1,5 @@
-<div class="container contact-us my-5">
-    <div class="heading-title mb-4 mb-md-5 text-center">Connect With Us</div>
+<div class="container contact-us">
+    <div class="heading-title pt-4 pb-3 py-md-5 text-center">Connect With Us</div>
 
     <div class="row justify-content-center align-items-center">
         <!-- LEFT TEXT SIDE -->
@@ -55,7 +55,7 @@
                     <textarea class="form-control" id="message" name="message" [(ngModel)]="form.message" rows="5"
                         required></textarea>
                 </div>
-                <div class="d-flex justify-content-center align-items-center mt-4" >
+                <div class="d-flex justify-content-center align-items-center my-4" >
                     <button type="submit" class="btn btn-primary py-2 px-5" [disabled]="iform.invalid">
                         Submit
                     </button>
