gh-pages commit

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -17,11 +17,11 @@
     border-radius: 30px;
 
     &.banner-1 {
-      background-image: url("https://images.unsplash.com/photo-1678995635432-d9e89c7a8fc5");
+      background-image: url("/images/open_ai.jpeg");
     }
 
     &.banner-3 {
-      background-image: url("https://images.unsplash.com/photo-1681992894234-6db66a592c29");
+      background-image: url("/images/working.jpeg");
       background-size: 100% 100%;
     }
   }
