minor changes for images done

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -17,11 +17,11 @@
     border-radius: 30px;
 
     &.banner-1 {
-      background-image: url("/images/open_ai.jpeg");
+      background-image: url("https://github.com/surindersaini2050/codemobix/blob/main/public/images/open_ai.jpeg?raw=true");
     }
 
     &.banner-3 {
-      background-image: url("/images/working.jpeg");
+      background-image: url("https://github.com/surindersaini2050/codemobix/blob/main/public/images/working.jpeg?raw=true");
       background-size: 100% 100%;
     }
   }
